2008-07-14  Dušan Hokův  <dusan@mirc.cz>

	* src/gnome-cmd-xfer.cc:
	* src/gnome-cmd-xfer-progress-win.cc:
	* src/gnome-cmd-xfer-progress-win.h:
	New progress indicator for individual files for transfer dialogs

2008-07-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/viewer-window.cc:
	Fix for intviewer menu entry 

2008-07-10  Padraig O'Briain  <Padraig.Obriain@Sun.COM>

	* src/intviewer/fileops.cc:
	Fix for problem #539753 (build error on Solaris)

2008-07-10  Mamoru Tasaka  <mtasaka@ioa.s.u-tokyo.ac.jp>

	* configure.in: Added 'ja' to ALL_LINGUAS

2008-06-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-search-dialog.cc:
	File search: added radio buttons for controlling file name matching mode (regex/shell)

2008-06-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Fix for problem when re-sorting (keep selection visible)

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con.h:
	Remote connection GUI: support for SSH+WebDAV in remote connection dlg

	* src/gnome-cmd-con-dialog.cc:
	Set default method to CON_SSH for new connections

2008-06-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Use current column sorting in advrename

2008-06-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Simplified code for "file.sendto" user action

	* src/gnome-cmd-user-actions.cc:
	Added copying selected URIs to clipboard with ALT+click on toolbar button

2008-06-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	Build fix for g++ 4.3

2008-06-12  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added support for user defined shortcuts to arbitrary programs,
	available as "command.execute" user action

2008-06-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data:
	Add GNOME Commander ftp site to remote servers for the first-time users

2008-06-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc: