@@ -105,7 +105,7 @@ List of user defined devices (see "Devices" tab in the "Options" dialog).
 List of user defined applications (see "Programs" tab in the "Options" dialog).
 .TP
 .B ~/.gnome-commander/connections
-List of FTP servers (see "Connections" menu).
+List of remote connections (see "Connections" menu).
 .TP
 .B ~/.gnome-commander/ftp-servers
 List of FTP servers (deprecated).
